# damsso

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  TEST_COVERAGE.md  justfile  mkdocs.yml  pyproject.toml
.claude/: session_title  session_tty  settings.local.json
.claude/.claude/: session_tty
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: Dockerfile  README.md  docker-compose.yml
docker/keycloak/: realm-oidc-tenant.json  realm-saml-tenant.json
docker/scripts/: entrypoint.sh
docs/: admin-guide.md  api-reference.md  architecture.md  configuration.md  email-configuration.md  host-app-integration.md  index.md  management-commands.md  models.md  quickstart.md  rls-setup.md  usage.md
example/: README.md  example.env
example/demo/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
example/templates/: home.html
example/templates/account/: login.html  logout.html  signup.html
src/damsso/: __init__.py  adapters.py  admin.py  apps.py  decorators.py  emails.py  fields.py  forms.py  middleware.py  models.py  oidc_utils.py  providers.py  relay_state.py  urls.py  views.py
src/damsso/management/commands/: cleanup_invitations.py  list_invitations.py  seed_demo_data.py  send_pending_invitations.py
src/damsso/migrations/: 0001_initial.py  0002_tenant_signup_token.py  0003_setup_rls.py  0004_alter_ssoprovider_id_alter_tenant_id_and_more.py  0005_alter_ssoprovider_oidc_client_secret_and_more.py  0006_alter_ssoprovider_id_alter_tenant_id_and_more.py  0007_update_protocol_help_text.py  0008_nullable_encrypted_fields.py  0009_alter_ssoprovider_fields.py  0010_tenantuser_auth_method.py  _swap.py
src/damsso/templates/damsso/: _user_info.html  _user_list.html  invite_user.html  manage_sso.html  manage_users.html  tenant_dashboard.html  tenant_login.html  test_sso.html  test_user_sso.html
src/damsso/templates/damsso/email/: invitation_message.html  invitation_message.txt  invitation_subject.txt
src/django_allauth_multitenant_sso/: __init__.py  adapters.py  admin.py  apps.py  emails.py  forms.py  middleware.py  models.py  providers.py  urls.py  views.py
src/django_allauth_multitenant_sso/management/commands/: cleanup_invitations.py  list_invitations.py  seed_demo_data.py  send_pending_invitations.py
src/django_allauth_multitenant_sso/migrations/: 0001_initial.py  0002_tenant_signup_token.py  0003_setup_rls.py  0004_alter_ssoprovider_id_alter_tenant_id_and_more.py  0005_alter_ssoprovider_oidc_client_secret_and_more.py  0006_alter_ssoprovider_id_alter_tenant_id_and_more.py  0007_update_protocol_help_text.py  0008_nullable_encrypted_fields.py
src/django_allauth_multitenant_sso/templates/allauth_multitenant_sso/: _user_info.html  _user_list.html  invite_user.html  manage_sso.html  manage_users.html  tenant_dashboard.html  tenant_login.html  test_sso.html  test_user_sso.html
tests/: __init__.py  conftest.py  test_adapters.py  test_decorators.py  test_emails.py  test_forms.py  test_id_token_decode.py  test_models.py  test_providers.py  test_urls.py
