[project]
name = "django-allauth-multitenant-sso"
version = "0.1.0"
description = "Django-allauth extension providing dynamic multi-tenant SSO support with OIDC and SAML"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "William Hayes", email = "william.s.hayes@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "django-allauth>=0.57.0",
    "python3-saml>=1.15.0",
    "authlib>=1.3.0",
    "cryptography>=41.0.0",
]
keywords = ["django", "allauth", "sso", "saml", "oidc", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-allauth-multitenant-sso"
Documentation = "https://github.com/yourusername/django-allauth-multitenant-sso#readme"
Repository = "https://github.com/yourusername/django-allauth-multitenant-sso"
Issues = "https://github.com/yourusername/django-allauth-multitenant-sso/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
